services/kube/prod/backend.yaml
apiVersion: v1
kind: Service
metadata:
    name: api
spec:
    selector:
        app: api
    ports:
        - protocol: TCP
          port: 8000
          targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
spec:
    replicas: 1
    selector:
        matchLabels:
            app: api
    template:
        metadata:
            labels:
                app: api
        spec:
            containers:
                - name: api
                  image: 975050343564.dkr.ecr.eu-west-2.amazonaws.com/api:latest
                  imagePullPolicy: Always
                  command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
                  resources:
                      limits:
                          memory: "1Gi"
                          cpu: "750m"
                  workingDir: /api
            imagePullSecrets:
                - name: aws-ecr-reg-cred
