services/kube/prod/frontend.yaml
apiVersion: v1
kind: Service
metadata:
    name: webapp
spec:
    selector:
        app: webapp
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
    type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: webapp
spec:
    replicas: 1
    selector:
        matchLabels:
            app: webapp
    template:
        metadata:
            labels:
                app: webapp
        spec:
            containers:
                - name: webapp
                  image: 975050343564.dkr.ecr.eu-west-2.amazonaws.com/webapp:latest
                  imagePullPolicy: Always
                  command: ["npm", "run", "start"]
                  resources:
                      limits:
                          memory: "1Gi"
                          cpu: "750m"
                  workingDir: /app
            imagePullSecrets:
                - name: aws-ecr-reg-cred
